--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 @use "@angular/material" as mat;
-
+@import "@angular/material/prebuilt-themes/indigo-pink.css";
 html {
   color-scheme: light dark;
   @include mat.theme(
@@ -16,6 +16,15 @@ html {
 body {
   background: var(--mat-sys-surface);
   color: var(--mat-sys-on-surface);
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
