--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,3 +28,23 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+/* Стили для error-snackbar */
+.error-snackbar {
+  background: #f44336 !important;
+  color: white !important;
+}
+
+.error-snackbar .mat-simple-snackbar-action {
+  color: white !important;
+}
+
+/* Стили для success-snackbar */
+.success-snackbar {
+  background: #4caf50 !important;
+  color: white !important;
+}
+
+.success-snackbar .mat-simple-snackbar-action {
+  color: white !important;
+}
